tests/pos/objects/update-01.ts
/*@ foo ::  ({ x: { v: number | v > 10 }; y: string + number }) => void */ 
function foo(o):void { 
    o.x = 20;
}
